fixed the navbar overlapping the scrollbar

--- a/styles.css
+++ b/styles.css
@@ -26,7 +26,7 @@ html {
 html,
 body {
   height: 100%;
-  overflow-x: hidden !important;
+  overflow-x: visible !important;
   background-color: #000000;
 }
 
